--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,11 +5,12 @@
 }
 
 body {
-    background: #f6f6f6;
+    background: #e4dddd;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     height: 100vh; 
+    padding-top: 1%;
 
 }
 
