--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -26,12 +26,34 @@ nav {
 }
 
 nav > a {
-    color: black;
+    color: #181717;
     text-decoration: none;
 }
 
 nav > a:hover {
     transition: 0.25s;
-    background: #515151;
-    color: white;
+    background: #e4dddd;
+    color: #000;
+}
+
+
+footer {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0,0.3);
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+    background-color: #f6f6f6; 
+    color: #181717; 
+    padding: 10px 0; 
+    text-align: center; 
+}
+
+.link__whatsapp {
+    color: #181717;
+    text-decoration: none;  
+}
+
+.link__whatsapp:hover {
+    transition: 0.25s;
+    font-weight: bold;
 }
