--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -54,6 +54,7 @@ footer {
 }
 
 .link__whatsapp:hover {
-    transition: 0.25s;
+    transition: 0.5s;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0,0.3);
     font-weight: bold;
 }
