--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,13 +5,15 @@
 }
 
 body {
-    background: #e4dddd;
+    background: #e4dddd;  
+    height: 100vh; 
+}
+
+header {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 100vh; 
     padding-top: 1%;
-
 }
 
 nav {
@@ -35,7 +37,6 @@ nav > a:hover {
     background: #e4dddd;
     color: #000;
 }
-
 
 footer {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0,0.3);
