--- a/assets/styles/cards.css
+++ b/assets/styles/cards.css
@@ -11,6 +11,7 @@
     border-radius: 10px;
     box-shadow: 4px 4px 10px rgb(80, 79, 79);
     width: 200px;
+    border: none;
 }
 
 .conteudoImg {
