--- a/assets/styles/cards.css
+++ b/assets/styles/cards.css
@@ -30,21 +30,25 @@
 .tituto-card {
     text-align: center;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .ingredientes-card {
     text-align: center;
-    color: rgb(182, 181, 181);
+    color: #fff;
+    font-weight: bold;
 }
 
 .preco-card {
     font-size: 18px;
     text-align: center;
+    font-weight: bold;
 }
 
 .comprar-card {
     cursor: pointer;
     color: #181717;
+    font-weight: bold;
     border-radius: 4px;
     background: #f6f6f6;
     padding: 5px;
