--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,7 +7,7 @@
 body {
     background-color: #000000;
     height: 100%;
-    background-image: linear-gradient(to bottom right, #515151 5%, #e4dddd 40%, #515151 60%, #e4dddd 100%);
+    background-image: linear-gradient(to bottom left, #515151 5%, #e4dddd 20%, #515151 60%, #e4dddd 100%);
     background-size: 200%, 200%;
     animation: float 6s linear infinite alternate;
 }
