padding no main

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -47,6 +47,10 @@ nav > a:hover {
     color: #000;
 }
 
+main {
+    padding-bottom: 120px;
+}
+
 footer {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0,0.3);
     position: fixed; 
@@ -68,3 +72,4 @@ footer {
     box-shadow: 3px 3px 3px 3px rgba(0, 0, 0,0.3);
     font-weight: bold;
 }
+
