--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -56,6 +56,7 @@ footer {
     position: fixed; 
     bottom: 0; 
     width: 100%; 
+    height: 8%;
     background-color: #f6f6f6; 
     color: #181717; 
     padding: 10px 0; 
