--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -56,9 +56,9 @@ footer {
     position: fixed; 
     bottom: 0; 
     width: 100%; 
-    height: 9%;
     background-color: #f6f6f6; 
     color: #181717; 
+    font-size: 14px;
     padding: 10px 0; 
     text-align: center; 
 }
