--- a/assets/styles/cards.css
+++ b/assets/styles/cards.css
@@ -99,3 +99,13 @@
     border: none;
     
 }
+
+.container-salgados {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    
+}
