--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -11,7 +11,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: var(--font-sub-titulos2) , var(--font-brains)
+    font-family: var(--font-sub-titulos2) , var(--font-brains);
 }
 
 body {
