--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,6 +12,8 @@
 
 body {
     background-image: url("/assets/img/imgfundo.jpg");
+    height: 100%;
+    width: 100%;
     /* background-color: #000000;
     height: 100%;
     background-image: linear-gradient(to bottom left, #515151 5%, #e4dddd 20%, #515151 60%, #e4dddd 100%);
