--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,6 +12,8 @@
 
 body {
     background-image: url("/assets/img/imgfundo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     height: 100%;
     width: 100%;
     /* background-color: #000000;
