--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,7 +12,7 @@
 
 body {
     background-image: url("/assets/img/imgfundo.jpg");
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
