--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,12 +10,21 @@
     font-family: Montserrat;
 }
 
+body , html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Oculta o scroll horizontal */
+    box-sizing: border-box;
+}
+
 body {
     background-image: url("/assets/img/imgfundo.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
+    overflow-x: hidden; /* Oculta o scroll horizontal */
+    box-sizing: border-box;
     /* background-color: #000000;
     height: 100%;
     background-image: linear-gradient(to bottom left, #515151 5%, #e4dddd 20%, #515151 60%, #e4dddd 100%);
