--- a/assets/styles/media-screnn.css
+++ b/assets/styles/media-screnn.css
@@ -28,10 +28,10 @@
         animation: float 6s linear infinite alternate; */
     }
 
-    @keyframes float {
+    /* @keyframes float {
         from{background-position: 0 0 ;}
         to{background-position: 100% 100%;}
-    }
+    } */
 
 
     header {
@@ -40,9 +40,9 @@
         align-items: flex-start;
         padding-top: 1%;
     }
-
+    
     nav {
-        background: #f6f6f6;
+        background: rgba(255,198,217, 40%);;
         width: 300px;
         display: flex;
         justify-content: center;
@@ -74,16 +74,45 @@
         position: fixed; 
         bottom: 0; 
         width: 100%; 
-        background-color: #f6f6f6; 
+        background-color: rgba(255,198,217, 40%); 
         color: #181717; 
+        font-family: 'Montserrat', sans-serif;
         font-size: 14px;
         padding: 10px 0; 
         text-align: center; 
+        
+    }
+
+    .footer-bar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2px; 
+    }
+
+    .link__instagram {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: #522312;
+        text-decoration: none;
+        gap: 4px;
+    }
+    
+    .link__instagram:hover {
+        transition: 0.5s;
+        box-shadow: 3px 3px 3px 3px rgba(0, 0, 0,0.3);
+        font-weight: bold;
     }
 
     .link__whatsapp {
-        color: #181717;
-        text-decoration: none;  
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: #522312;
+        text-decoration: none;
+        gap: 4px;
+        padding-top: 5px;
     }
 
     .link__whatsapp:hover {
