--- a/assets/styles/media-screen-card.css
+++ b/assets/styles/media-screen-card.css
@@ -57,6 +57,7 @@
         font-weight: bold;
         border-radius: 4px;
         background: transparent;
+        font-size: 16px;
         padding: 5px;
         border: none;
         width: 80%;
