--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -69,4 +69,65 @@ main {
     padding-bottom: 120px;
 }
 
+footer {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0,0.3);
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+    background-color: rgba(255,198,217, 40%); 
+    color: #181717; 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    padding: 10px 0; 
+    text-align: center; 
+}
+
+.footer-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2px; 
+}
+
+.link__instagram {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #522312;
+    text-decoration: none;
+    gap: 4px;
+}
+
+.link__instagram img {
+    width: 30px;
+    height: 30px;
+}
+
+.link__instagram:hover {
+    transition: 0.5s;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0,0.3);
+    font-weight: bold;
+}
+
+.link__whatsapp {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #522312;
+    text-decoration: none;
+    gap: 4px;
+    padding-top: 5px;
+}
+
+.link__whatsapp img {
+    width: 30px;
+    height: 30px;
+}
+
+.link__whatsapp:hover {
+    transition: 0.5s;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0,0.3);
+    font-weight: bold;
+}
+
 }
