--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -60,8 +60,9 @@ nav > a {
 }
 
 nav > a:hover {
-    transition: 0.25s;
-    background: #F62F87;
+    transition: 0.5s;
+    background: rgba(246,47,135,40%);
+    border-radius: 12px;
     color: #000;
 }
 
