--- a/assets/styles/cards.css
+++ b/assets/styles/cards.css
@@ -24,9 +24,14 @@
     }
 
     .img-card {
+        transition: 500ms;
         border-radius: 8px 8px 0 0;
         width: 100%;
         height: 100%;
+    }
+
+    .img-card:hover {
+        transform: scale(1.1)
     }
 
     .tituto-card {
