--- a/assets/styles/media-screen-card.css
+++ b/assets/styles/media-screen-card.css
@@ -128,6 +128,7 @@
     .quantity-input {
         all: initial;
         width: 20vh;
+        padding-left: 1.4rem;
         border: none;
         color: #F62F87;
         outline: none; 
@@ -147,12 +148,13 @@
 
     .confirm-button {
         height: 27px;
-        width: 11vh;
+        width: 100%;
         font-family: 'Dancing Script';
         font-size: 20px;
-        border-radius: 12px;
+        font-weight: 700;
+        border-radius: 10px;
         border: none;
         color: #F62F87;
-        background: #FFC6D9;
+        background: rgba(255,198,217, 60%);
     }
 }
